# compost-rpc

./: .clang-format  .gitignore  CONTRIBUTING.md  GitVersion.yml  README.md  SECURITY.md  example_protocol_def.py  example_script.py  pyproject.toml  x.py
compost_rpc/: compost_rpc.py
compost_rpc/lib/c/: header_template.py  source_template.py
csharp/: .gitignore  Compost.sln  README.md
csharp/docs/: docfx.json  index.md
csharp/docs/pages/: getting-started.md  introduction.md  protocol-definition.md  toc.yml  transport-implementation.md
csharp/src/CompostRpc/: BufferUnit.cs  CompostRpc.csproj  ITransport.cs  Message.cs  MessageHeader.cs  MessageReceivedEventArgs.cs  MessageShape.cs  Protocol.NotificationInfo.cs  Protocol.RPCInfo.cs  Protocol.cs  Serialization.cs  Session.cs  Transaction.cs
csharp/tests/: Directory.Build.props
csharp/tests/CompostRpc.IntegrationTests/: CompostRpc.IntegrationTests.csproj  NotificationTestsBase.cs  NotificationTestsOverMock.cs  NotificationTestsOverProcess.cs  RpcTestsBase.cs  RpcTestsOverMock.cs  RpcTestsOverProcess.cs  RpcTestsOverTcp.cs
docs/: conf.py  index.md  package-lock.json
docs/_doxygen/: Doxyfile
docs/api_reference/: c_api.rst  python_api.rst
docs/development/: coding-style.md
docs/user_guide/: generating_code.md  getting_started.md  message_structure.md  notifications.md  transports.md  tutorial.md
docs/user_guide/datatypes/: enums.md  index.md  (+2 more)
examples/pc_to_pc/: main.c  main.py  protocol_def.py
test/: protocol_def.py  protocol_impl.c  test_compost.py  test_rpc_call.c  test_slice.c
test/mock/: main.c
(+37 files in other folders)
